src/test/ui/traits/trait-upcasting/subtrait-method.stderr
error[E0599]: no method named `c` found for reference `&dyn Bar` in the current scope
  --> $DIR/subtrait-method.rs:56:9
   |
LL |     bar.c();
   |         ^ help: there is a method with a similar name: `a`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Baz` defines an item `c`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:28:1
   |
LL | trait Baz: Bar {
   | ^^^^^^^^^^^^^^

error[E0599]: no method named `b` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:60:9
   |
LL |     foo.b();
   |         ^ help: there is a method with a similar name: `a`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Bar` defines an item `b`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:18:1
   |
LL | trait Bar: Foo {
   | ^^^^^^^^^^^^^^

error[E0599]: no method named `c` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:62:9
   |
LL |     foo.c();
   |         ^ help: there is a method with a similar name: `a`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Baz` defines an item `c`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:28:1
   |
LL | trait Baz: Bar {
   | ^^^^^^^^^^^^^^

error[E0599]: no method named `b` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:66:9
   |
LL |     foo.b();
   |         ^ help: there is a method with a similar name: `a`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Bar` defines an item `b`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:18:1
   |
LL | trait Bar: Foo {
   | ^^^^^^^^^^^^^^

error[E0599]: no method named `c` found for reference `&dyn Foo` in the current scope
  --> $DIR/subtrait-method.rs:68:9
   |
LL |     foo.c();
   |         ^ help: there is a method with a similar name: `a`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Baz` defines an item `c`, perhaps you need to implement it
  --> $DIR/subtrait-method.rs:28:1
   |
LL | trait Baz: Bar {
   | ^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0599`.
